<resources>
        <string name="Please_Accept_Permission">Please Accept Permission</string>
        <string name="add_id_image">Add ID image</string>
        <string name="add_signature">Add Signature</string>
        <string name="all">All</string>
        <string name="all_fields_are_required">All Fields are required</string>
        <string name="all_orders">All Orders</string>
        <string name="app_name">Saee</string>
        <string name="apply">Apply</string>
        <string name="arabic">اللغة العربية</string>
        <string name="are_you_sure">Are you Sure?</string>
        <string name="at_company">At Company</string>
        <string name="balance">Balance:</string>
        <string name="cancel">Cancel</string>
        <string name="car_license">Car License</string>
        <string name="change_password">Change Password</string>
        <string name="change_status">Change Status</string>
        <string name="chat">Chat</string>
        <string name="check">Check</string>
        <string name="cleared">Cleared</string>
        <string name="client_signature">Client Signature</string>
        <string name="confirm">Confirm</string>
        <string name="confirm_new_password">Confirm New Password</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="confirmed">Confirmed</string>
        <string name="currency">JDs</string>
        <string name="current_password">Current Password</string>
        <string name="customer_signature">Customer Signature</string>
        <string name="date">Date</string>
        <string name="delivered">Delivered</string>
        <string name="delivery_price">Delivery Price:</string>
        <string name="delivery_price_">Delivery Price:</string>
        <string name="details">Details</string>
        <string name="driver_license">Driver License</string>
        <string name="drop_off">Drop Off</string>
        <string name="end_date">End Date</string>
        <string name="english">English</string>
        <string name="enter_reference_code_manually">Enter Reference Code Manually</string>
        <string name="enter_the_verification_code_sent_to_your_email">Enter the verification code sent to your email</string>
        <string name="exit_confirmation">Exit Confirmation</string>
        <string name="filter">Filter</string>
        <string name="forgot_password">Forgot Password</string>
        <string name="get">Get</string>
        <string name="id">ID</string>
        <string name="location">Location:</string>
        <string name="location_">Location:</string>
        <string name="location_services_are_required_enable_them">Location services are required. enable them?</string>
        <string name="login">Login</string>
        <string name="logout">Logout</string>
        <string name="name">Name:</string>
        <string name="national_id">National ID:</string>
        <string name="new_password">New Password</string>
        <string name="no_orders_found">No orders found</string>
        <string name="notes">Notes:</string>
        <string name="order_details">Order Details</string>
        <string name="order_price">Order Price:</string>
        <string name="order_price_">Order Price:</string>
        <string name="order_status">Order Status</string>
        <string name="orders">Orders</string>
        <string name="password">Password</string>
        <string name="passwords_must_be_matched">Passwords must be matched</string>
        <string name="phone_number">Phone Number</string>
        <string name="phone_number_">Phone Number:</string>
        <string name="pick_up">Pick Up</string>
        <string name="please_capture_the_id_image">Please take the ID image</string>
        <string name="please_check_the_reference_code">Please Check the Reference Code</string>
        <string name="please_check_the_verification_code">Please check the verification code</string>
        <string name="please_double_check_the_signature_and_save_it">Please double check the signature and save it</string>
        <string name="please_write_a_message_to_send">Please write a message to send</string>
        <string name="profile">Profile</string>
        <string name="reason">Reason</string>
        <string name="reason_1">Refusal of Delivery</string>
        <string name="reason_2">Customer Unavailable</string>
        <string name="reason_3">Address Change</string>
        <string name="reason_4">Wrong Order</string>
        <string name="reason_5">Other Reasons</string>
        <string name="received">Received</string>
        <string name="reference_code">Reference Code</string>
        <string name="rejected">Rejected</string>
        <string name="requested">Requested</string>
        <string name="resend">resend</string>
        <string name="resend_code_in_n">Resend Code In:\n</string>
        <string name="reset_password">Reset Password</string>
        <string name="saved">Saved</string>
        <string name="scan_qr_code">Scan QR code</string>
        <string name="select_language">Select Language</string>
        <string name="signature">Signature</string>
        <string name="something_went_wrong">Something went wrong, check your internet connection</string>
        <string name="start_date">Start Date</string>
        <string name="status">Status</string>
        <string name="status_">Status:</string>
        <string name="submit">Submit</string>
        <string name="sure">Sure</string>
        <string name="the_password_length_mush_be_more_than_8_characters">The password length mush be more than 8 characters</string>
        <string name="the_password_mush_contain_one_number_at_least">The password mush contain one number at least</string>
        <string name="the_password_mush_contain_uppercase_and_lowercase_letters">The password mush contain Uppercase and lowercase letters</string>
        <string name="the_password_must_contain_one_uppercase_character_one_lowercase_character_and_must_be_a_minimum_length_of_8_characters">The password must contain one uppercase character, one lowercase character, and must be a minimum length of 8 characters.</string>
        <string name="this_order_is_assigned_for_another_client">This Order is assigned for another client</string>
        <string name="transactions">Transactions</string>
        <string name="type">Type</string>
        <string name="type_">Type:</string>
        <string name="upcoming_orders">Upcoming Orders</string>
        <string name="username">Username</string>
        <string name="write_your_message_here">write your message here</string>
        <string name="you_can_drag_and_drop_to_sort_s_nyou_can_multi_select_to_change_the_status">You can drag and drop to sort.\nYou can multi-select to change the status.</string>
        <string name="you_cant_change_the_status_of_this_order_contact_supervisor">you can\'t change the status of this order, contact supervisor</string>
    </resources>