<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:background="@drawable/shape_dialog">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_title_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:buttonTint="@color/white"
        android:text="@string/confirmed"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_one" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:buttonTint="@color/white"
        android:text="@string/received"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirmed"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_one" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/at_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:buttonTint="@color/white"
        android:text="@string/at_company"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmed" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/delivered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:buttonTint="@color/white"
        android:text="@string/delivered"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirmed"
        app:layout_constraintTop_toBottomOf="@+id/received" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rejected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:buttonTint="@color/white"
        android:text="@string/rejected"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivered" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_title_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/rejected" />

    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_two">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/dark_primary"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pick_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/pick_up"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/drop_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/drop_off"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_title_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/type_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/start_date"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/end_date"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_date" />
</androidx.constraintlayout.widget.ConstraintLayout>
