<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/phone_number_"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/name_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/phone_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/national_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/national_id"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/phone_value" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/national_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/national_title" />

            <LinearLayout
                android:id="@+id/attachments_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/background_button"
                android:backgroundTint="@color/grey"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/national_value">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/dark_primary"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/id"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/car_license"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/car_license"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/driver_license"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/grey"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/driver_license"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/attachment_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:scaleType="centerCrop"
                android:src="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/attachments_buttons"
                app:riv_corner_radius="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/background_button"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@+id/attachment_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:background="@drawable/background_button"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
